Fix styling so chart and table are aligned correctly

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ a {
 }
 
 .highcharts-background {
-  fill: #ffffffaa;
+  fill: #ffffff00;
 }
 
 .highcharts-boxplot-box {
